sources/keycloak/keycloak-ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  # annotations:
  #   FIXME add something for cookie size, keycloak.. in ../base
spec:
  rules:
  - host: keycloak.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: http
  tls:
  - secretName: keycloak-tls
    hosts:
    - keycloak.codeformuenster.org
